--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,7 @@
     <h1> Welcome to express  </h1>
     <p> post request sent to /users to test dynamoDb connection</p>
     <script>
-        fetch('/users', {
+        fetch('/users/dydb', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
