delete chinook tables

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,5 +17,9 @@
             body: JSON.stringify({ username: 'Cus', password: 'pass'})
         }).then(user => user.json()).then(data =>{} );
     </script>
+    <script> 
+ 
+
+    </script>
 </body>
 </html>
